modified by me for consistency/bug fixing.

Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)

Version 1.0.8.5
  -  Added language files
     * AutoHotkey (Naveen Garg)
     * Awk (George Pollard)
     * jQuery (Rob Loach)
     * PureBasic (Gustavo Julio Fiorenza)
     * R / S+ (Ron Fredericks, Benilton Carvalho)
  -  Fixed legitimate numbers sometimes missing from highlighting (BenBE)
  -  Fixed a problem with URLs allowing to break highlighting (BenBE)
  -  Allowed for String and Number Styles to be set by the API (BenBE)
  -  Improvements to language files (BenBE)
     * Fixed case-insensitively duplicate keywords (BenBE)
     * DCS language file contained HARDQUOTE section but no hardquotes (BenBE)
     * Some additional headers for Email\mbox highlighting (BenBE)
     * Added some more Keywords for robots.txt highlighting (BenBE)
Version 1.0.8.4
  -  Added language files
     * BibTeX (Quinn Taylor)
     * CMake (Daniel Nelson)
     * Erlang (Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim)
     * FO (abas-ERP) (Tan-Vinh Nguyen)
     * Property Files (Edy Hinzen)
     * Whois (RPSL format) entries (Benny Baumann)
  -  Changed INT_BASIC number format to allow numbers followed . at EOL (BenBE)
  -  Higher prority for keywords over regexps (BenBE)
  -  Added missing set_script_style API function (BenBE)
  -  Fixed missing check for comment_regexp preference in HardQuotes (BenBE)
  -  Fixed a problem with Strict Block Detection if the Strict Block Regexp
     requires matching groups for itself (BenBE)
  -  Improvements to language files (BenBE)
     * Added PCRE regexp support for Action script (SF#2655644, BenBE)
     * Removed some superfluous keywords from ABAP (BenBE)
     * Removed duplicate keywords for Progress (BenBE)
     * Removed duplicate keywords for T-SQL (BenBE)
     * Linking for PowerShell special variables revised (BenBE)