@@ -17,6 +17,7 @@ Version 1.0.8.5
      * AutoHotkey (Naveen Garg)
      * Awk (George Pollard)
      * jQuery (Rob Loach)
+     * PowerBuilder (Doug Porter)
      * PureBasic (Gustavo Julio Fiorenza)
      * R / S+ (Ron Fredericks, Benilton Carvalho)
   -  Fixed legitimate numbers sometimes missing from highlighting (BenBE)
